# parameter-golf

./: EXPERIMENTS_RESULTS.md  README.md  pyproject.toml  train_gpt.py
data/: README.md
